--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# API key
+healthyVR-0e3c1dda3bf9.json
+
+properties.csv
+titles.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
